--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ Dev-Sim/Library/ScriptMapper
 Dev-Sim/Library/unity default resources
 Dev-Sim/Library/unity editor resources
 Dev-Sim/Library/FacebookSDK/
+Dev-Sim/Library/UnityAssemblies/
