Updates ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ Dev-Sim/Library/UnityAssemblies/
 Dev-Sim/Library/CurrentLayout.dwlt
 Dev-Sim/Library/ShaderCache.db
 Dev-Sim/Library/LastSceneManagerSetup.txt
+Dev-Sim/Library/CrashedAssetImports.txt
